--- a/MPTally/View/CreateBill/MPCreateBillHeaderView.xib
+++ b/MPTally/View/CreateBill/MPCreateBillHeaderView.xib
@@ -28,8 +28,14 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWC-SZ-Y0D">
-                    <rect key="frame" x="317" y="19.5" width="42" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWC-SZ-Y0D">
+                    <rect key="frame" x="324.5" y="19.5" width="34.5" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FtM-4E-6NU">
+                    <rect key="frame" x="308.5" y="20" width="11" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -38,10 +44,12 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="84r-wN-2i9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="1aY-aE-g5c"/>
+                <constraint firstItem="nWC-SZ-Y0D" firstAttribute="leading" secondItem="FtM-4E-6NU" secondAttribute="trailing" constant="5" id="8V8-gW-WPx"/>
                 <constraint firstAttribute="trailing" secondItem="nWC-SZ-Y0D" secondAttribute="trailing" constant="10" id="Kk9-GY-YE2"/>
                 <constraint firstItem="84r-wN-2i9" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Whi-OO-hFb"/>
                 <constraint firstItem="nWC-SZ-Y0D" firstAttribute="centerY" secondItem="84r-wN-2i9" secondAttribute="centerY" id="r1l-aR-bhN"/>
                 <constraint firstItem="JFG-oH-bAE" firstAttribute="centerY" secondItem="84r-wN-2i9" secondAttribute="centerY" id="tOO-Wz-RgX"/>
+                <constraint firstItem="FtM-4E-6NU" firstAttribute="centerY" secondItem="nWC-SZ-Y0D" secondAttribute="centerY" id="xgU-z2-eLe"/>
                 <constraint firstItem="JFG-oH-bAE" firstAttribute="leading" secondItem="84r-wN-2i9" secondAttribute="trailing" constant="10" id="zfb-Sa-Ugg"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
