--- a/MPTally/View/Wallet/MPWalletBalanceHeaderView.xib
+++ b/MPTally/View/Wallet/MPWalletBalanceHeaderView.xib
@@ -30,7 +30,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.60784313729999995" green="0.84705882349999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="yOx-Kn-khh" secondAttribute="trailing" constant="10" id="24F-CA-ffD"/>
                         <constraint firstItem="hIk-Ee-pDK" firstAttribute="centerY" secondItem="c0e-fu-Qco" secondAttribute="centerY" id="evO-7e-k4G"/>
