--- a/MPTally/View/CreateBill/MPCalculatorView.xib
+++ b/MPTally/View/CreateBill/MPCalculatorView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -305,7 +304,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="hcQ-Gi-2hj" firstAttribute="leading" secondItem="8KO-mH-SSO" secondAttribute="leading" id="2Q1-Qq-OcU"/>
                         <constraint firstItem="hcQ-Gi-2hj" firstAttribute="top" secondItem="d6C-Xa-oSD" secondAttribute="bottom" constant="1" id="38h-lf-d5o"/>
@@ -326,7 +325,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="8KO-mH-SSO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="DDm-5S-4FH"/>
                 <constraint firstAttribute="trailing" secondItem="Obn-a4-A5D" secondAttribute="trailing" id="HZu-u4-zKv"/>
@@ -342,6 +340,7 @@
                 <outlet property="confirmButton" destination="LHx-OB-pOl" id="PmB-Ad-Man"/>
                 <outlet property="dateButton" destination="pEP-MM-gFm" id="wrL-Ne-PHP"/>
                 <outlet property="remarkButton" destination="aqd-Aq-bTr" id="INX-6u-KgY"/>
+                <outlet property="toolView" destination="Obn-a4-A5D" id="K42-PL-V1g"/>
             </connections>
             <point key="canvasLocation" x="-459" y="-267.5"/>
         </view>
