--- a/MPTally/View/Wallet/MPAccountAddView.xib
+++ b/MPTally/View/Wallet/MPAccountAddView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MPWalletAddView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MPAccountAddView">
             <rect key="frame" x="0.0" y="0.0" width="312" height="68"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
