--- a/MPTally/View/Wallet/MPAccountDetailHeaderView.xib
+++ b/MPTally/View/Wallet/MPAccountDetailHeaderView.xib
@@ -77,6 +77,9 @@
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="321.00"/>
+                    <connections>
+                        <action selector="editBalance:" destination="iN0-l3-epB" eventType="touchUpInside" id="AOU-eY-ZAX"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fVJ-3b-JoQ" userLabel="outcome">
                     <rect key="frame" x="114" y="130" width="114" height="50"/>
